add: swagger, ver up